<resources>
    <string name="app_name">Call Keeper</string>
    <string name="label_home">Home</string>
    <string name="label_history">History</string>
    <string name="label_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_add_contact">Add Contact</string>
    <string name="empty_contacts_msg1">You haven\'t added any contacts yet.</string>
    <string name="empty_contacts_msg2">Enhance your call management by adding phone numbers or selecting contacts.</string>
    <string name="empty_contacts_msg3">Tap the \'+\' button to begin</string>
    <string name="empty_call_log_message">No call logs</string>
    <string name="label_submit">Submit</string>
    <string name="label_update">Update</string>
    <string name="hint_input_contact_name">Enter contact name</string>
    <string name="hint_input_phone_number">Enter phone number</string>
    <string name="hint_input_custom_message">Enter custom message (Optional)</string>
    <string name="hint_contact_name">Name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_custom_message">Message</string>
    <string name="label_add">Add</string>
    <string name="label_choose_from_your_contacts">Choose from your Contacts</string>
    <string name="label_or">OR</string>
    <string name="empty_name_error_msg">Please enter contact name</string>
    <string name="empty_phone_number_error_msg">Please enter phone number</string>
    <string name="invalid_name_error_msg">Contact Name cannot contain numbers or special characters</string>
    <string name="invalid_phone_number_error_msg">Phone number must be of 10 digits</string>
    <string name="invalid_custom_message_error_msg">Message cannot contain numbers or special characters</string>
    <string name="unexpected_error_msg">An Unexpected error occurred.</string>
    <string name="duplicate_phone_number_error_msg">Contact with this phone number already exists</string>
    <string name="delete_contact_confirmation_msg">Are you sure you want to delete this contact?</string>
    <string name="delete_contact">Delete</string>
    <string name="cancel_contact">Cancel</string>
    <string name="contact_permission_error_msg">Contacts Permission Denied.</string>
    <string name="default_message">I am currently busy. Call me later</string>
    <string name="enable_feature_label">Enable automatic call rejection</string>
    <string name="default_message_guide_text">Apply default message to all contacts</string>
    <string name="default_message_label">Default Message</string>
    <string name="apply_changes_label">Update message</string>
    <string name="label_add_contact">Add contact</string>
    <string name="delete_contact_message">%s | %s deleted.</string>
    <string name="delete_contact_info">%s | %s</string>
    <string name="empty_contacts_message">Please add at least one contact to activate the call rejection feature</string>
    <string name="default_message_updated">Default message updated</string>
    <string name="empty_default_msg_error">Default message cannot be blank.</string>
</resources>