<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="message1"
            type="String" />

        <variable
            name="message2"
            type="String" />

        <variable
            name="message3"
            type="String" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:text="@{message1}"
                tools:text="@string/empty_contacts_msg1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8dp"
                android:textAlignment="center"
                android:text="@{message2}"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                tools:text="@string/empty_contacts_msg2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8dp"
                android:text="@{message3}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                tools:text="@string/empty_contacts_msg3" />
        </LinearLayout>
    </RelativeLayout>
</layout>