<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.shivamgupta.callkeeper.presentation.settings.SettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_16dp"
            tools:context=".presentation.settings.SettingsFragment">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/enable_feature_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/enable_feature_label"
                android:checked="@{vm.isCallRejectionEnabled()}"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/apply_default_msg_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:checked="@{vm.applyDefaultMsg}"
                android:text="@string/default_message_guide_text"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/default_msg_input_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:hint="@string/default_message_label"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="5"
                    android:text="@{vm.defaultSmsMessage}"
                    tools:text="I am currently busy. Call me later" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apply_changes_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/apply_changes_label" />

        </LinearLayout>
    </ScrollView>
</layout>